# qnm-fitting

./: .gitignore  FitAll.py  FitCoeffsLinear.py  GetAndSetupSXSDATA.sh  LoadPython.sh  README.txt  SetupData.py
Deprecated/: GivenMassAndSpin.py  README.txt  VarPro.py  main.cpp
GetData/: DownloadSXSWaveform.py
LIGONOISE/: SNR.ipynb
Testing/: FreqSpace.ipynb  scri_tutorial.ipynb
Testing/.ipynb_checkpoints/: scri_tutorial-checkpoint.ipynb
fitting/: MinimizeGivenMa.py  PrecessionTools.py  SetupData.py  SetupTrial.py
src/: CMakeLists.txt  FitAll.py  FitCoeffsLinear.py  FitSpin.py  PlotCosts.py
src/NRPython/: CMakeLists.txt  varpro.cpp
src/Python/: CMakeLists.txt  Doxyfile  VectorHelpers.hpp  __init__.py  fgauss.hpp  main.cpp  qnm-fitting.hpp  test.py  test_gauss.py  test_qnm_fitting.py  varpro.cpp
src/fitting/: MinimizeGivenMa.py  SetupData.py
src/includes/: cholesky.h  deviates.h  fgauss_sep.h  fit_examples.h  gamma.h  marquardt.hpp  nr3devel.h  nr3python.h  nr3testutils.h  ran.h  sep_marquardt.hpp  svd.h  test_Fitsep.h  test_Fitsep.hpp  vectorhelpers.hpp
src/varpro/: CMakeLists.txt  test_Fitsep.cpp
